Fix margin for alignment

--- a/client/src/styles/MainSearch.css
+++ b/client/src/styles/MainSearch.css
@@ -4,7 +4,7 @@ form {
 }
 
 .search-container {
-    margin: 0 2rem;
+    margin: 0 1rem;
     padding: .75rem;
     border: 1px solid var(--primary-color);
     border-radius: 2rem;
